# charlotte

./: .gitignore  CHANGELOG.md  CLAUDE.md  README.md  SECURITY.md  crawl_test.py  harness.py  pyproject.toml  score_suite.py  smoke_test.py  suite_answers.json
.github/workflows/: ci.yml  publish.yml
charlotte/: __init__.py  config.py  exceptions.py  models.py
charlotte/adapters/: __init__.py  base.py  groq.py  local.py
charlotte/core/: adapter_validation.py  browser_fetch.py  candidate_extractor.py  destination_verifier.py  engine.py  engine_loop.py  engine_support.py  extractor.py  fetch_util.py  fetcher.py  find_link.py  goal_context_cache.py  goal_preprocessor.py  input_wrapper.py  link_ranker.py  model_metrics.py  normalizer.py  pinning_transport.py  plausibility.py  provenance.py  result_writer.py  robots.py  sanitizer.py  text_normalization.py
docs/: charlotte-README.html  charlotte-functional-audit v1.md  charlotte-functional-audit-v2.md  charlotte-security-audit-v1.md  charlotte-security-audit-v2.md  charlotte-spec-v1.2.md  charlotte-spec-v1.3.md  charlotte-spec-v1.4.md  charlotte-spec-v2.0.1.md  charlotte-spec-v2.0.2.md  charlotte-spec-v2.0.md  charlotte-tasks.md
scripts/: README.md  adapter_factory.py  bench.py  bench_compare.py  bench_run_comparison.sh  brainstorm_preprocessor.py  crawl_test.py  groq_playtest.py  parish_bulletin_test.py  school_calendar_test.py  smoke_test.py  suite_answers.json  suite_test.py  test_extractor.py  test_preprocessor.py  test_verifier.py
tests/integration/: conftest.py  test_robots_rfc9309.py  test_t01_t04_happy_budget.py  test_t05_t08_playwright_robots.py  test_t09_t12_adapter_provenance.py  test_t13_t18_url_redirects.py  test_t19_t22_timeouts_findlink.py  test_t23_t30_security_stream.py  test_t31_t33_answer_field.py
tests/unit/: test_adapter.py  test_adapter_factory.py  test_candidate_extractor.py  test_config.py  test_destination_verifier.py  test_engine_crawl.py  test_exceptions.py  test_extractor.py  test_fetcher.py  test_find_link.py  test_link_ranker.py  (+14 more)
