[build-system]
requires = ["setuptools>=69.0"]
build-backend = "setuptools.build_meta"

[project]
name = "charlotte-crawler"
version = "1.2.0"
description = "A goal-directed web navigation agent"
readme = "README.md"
license = { file = "LICENSE" }
authors = [{ name = "Boss Button Studios" }]
requires-python = ">=3.11"
keywords = ["web", "crawler", "agent", "navigation", "llm"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "httpx>=0.27.0,<1.0",
    "beautifulsoup4>=4.12.0,<5.0",
    "rank-bm25>=0.2.0,<1.0",
]

[project.optional-dependencies]
playwright = ["playwright>=1.40.0,<3.0"]
groq = ["groq>=0.5.0,<2.0"]
# LocalAdapter talks to any OpenAI-compatible endpoint via httpx (already required).
# The `ollama` extra installs the native Ollama SDK for callers who prefer it.
ollama = ["ollama>=0.1.0,<1.0"]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.23.0",
    "respx>=0.20.0",
    "pytest-cov>=4.0.0",
]

[project.urls]
Homepage = "https://github.com/Boss-Button-Studios/charlotte"
Documentation = "https://github.com/Boss-Button-Studios/charlotte#readme"
Repository = "https://github.com/Boss-Button-Studios/charlotte"
Issues = "https://github.com/Boss-Button-Studios/charlotte/issues"
Changelog = "https://github.com/Boss-Button-Studios/charlotte/blob/main/CHANGELOG.md"

[tool.setuptools.packages.find]
where = ["."]
include = ["charlotte*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["charlotte"]
omit = ["tests/*"]
